trying to fix vertical text alignment on date @android and ios

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -71,6 +71,7 @@ label {
 }
 
 input[type=date] {
+		vertical-align: center;
     display:block;
     -webkit-appearance:button;
     -moz-appearance:button;
